# Tapplet

./: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md  pre_make.make
auto-test/: README  global.cfg  pytest.ini  pytest_main.py
auto-test/tapplet/acl/: acl_rest_test.py  acl_se_test.py
auto-test/tools/: conftest_tools.py  pkt_tcpdump.sh  rest_helper.py  rest_test_class.py  rest_tools.py  send_pkt_raw.sh  send_pkt_with_tcpdump.sh  send_pkt_with_tcpdump_with_direction.sh  tcpreplay_tools.py
build-pkg/: Makefile
build-pkg/dpdk-setup/: vpp.service.old
build-pkg/rpm/: Makefile
build-pkg/scripts/: gen-tapplet-deb-install  generate-deb-changelog  version
build-pkg/sfrest/: sfrest.service
cmake/: plugin.cmake
nshell-lib/: CMakeLists.txt  include_src.cmake
nshell-lib/include/: nlib_debug.h  sf_api_macro.h  sf_api_template.c  sf_api_template.h  sf_crc_nshell.h  sf_gcd.h  sf_shm_aligned.h  sf_shm_main.h  sf_shm_map.h
nshell-lib/sf_plugin_api/: action_api.c  action_api.h  global_api.c  global_api.h  ip_reass_api.c  ip_reass_api.h  sf_acl_api.c  sf_acl_api.h  sf_acl_hash.c  sf_acl_tuple_api.c  sf_intf_api.c  sf_intf_api.h  sf_main_api.c  sf_main_api.h
nshell-lib/shm-manage/: shm_main.c  shm_map.c  shm_utils.c
nshell-lib/shm-manage-app/: delete_all_shm.c  load_shm.c  read_shm.c  save_shm.c
nshell-lib/vpp-udp-client/: send2vpp.h  send2vpp_rest.c
release/: build-tapplet.sh  build.sh
release/deb/: build_vpp.sh  remove_vpp.sh
release/patchs/: vpp1810.patch
rest/: Makefile  app.py  check_import.py  create_ssl_pki.py  restd.cfg  restd.py
rest/basic_handler/: base_handler.py  login_handler.py  logout_handler.py  static_handler.py
rest/conf/: globalValue.py  setting.py
rest/tapplet/: acl_handler.py  interface_handler.py  interfaces_map.py  nshellutils.py  sys_conf_handler.py  system_handler.py  url.py  vpp_handler.py
rest/urls/: login_url.py  url.py
rest/utils/: apiException.py  net_tools.py  ssl.py  tools.py
sf_cli/: Makefile  check_import.py
sf_cli/sf_rest_cli/: README  sf_rest_cli.py
src/: CMakeLists.txt  sf_macro.cmake
src/acl/: CMakeLists.txt  acl_shm.c  init.c  plugin.c
src/acl/cli/: acl_cli.c
src/acl/include/: acl_defines.h  acl_main.h  acl_rte_def.h  acl_stat_tools.h  sf_acl_lock.h  sf_acl_shm.h
src/acl/nodes/: acl_entry.c
src/acl/other/: acl_sync_process.c  acl_tuple_sync.c
src/actions/: CMakeLists.txt  init.c  plugin.c  share_shm.c
src/actions/include/: action.h  action_define.h  action_main.h  action_path_defines.h  action_path_tools.h  action_shm.h  action_tools.h
src/actions/nodes/: action_main.c
src/actions/nodes/additional/: node_action_encap_erspan.c  node_action_encap_gre.c  node_action_encap_vxlan.c
src/actions/nodes/load_balance/: load_balance_interface.c
src/dpdk/: CMakeLists.txt  buffer.c  main.c  sf_dpdk_init.c
src/dpdk/device/: common.c  device.c  init.c  node.c
src/ip_reass/: init.c  ip_reass.cmake  shared_mem.c
src/ip_reass/cli/: ip_reass_stat.c
src/ip_reass/include/: ip_reass_stat_tools.h  ip_reass_timer.h  ip_reass_tools.h  sf_ip_reass.h  sf_ip_reass_shm.h
src/ip_reass/nodes/: ip4_reass.c  ip6_reass.c  ip_reass_forward.c  ip_reass_on_timer.c
src/ip_reass/other/: update_ip_reass_pkt.c
src/sf_lib/: sf_lib.cmake
src/sf_lib/sf_hash/: generic_hash.c  generic_hash.h  sf_crc32.h
src/sf_lib/sf_lock/: sf_lock.h
src/sf_lib/sf_net/: common_header.h  new_pkt_wdata.h  pkt_wdata.h  sf_checksum_tools.h  sf_huge_pkt.h
src/sf_lib/sf_pool/: sf_pool.c  sf_pool.h
src/sf_lib/sf_port/: sf_ports.h
src/sf_lib/sf_shm/: sf_shm_vpp.c  sf_shm_vpp.h
src/sf_lib/sf_timer/: sf_timer.c  sf_timer.h  sf_timer_enqueue.h  sf_timer_input.c  sf_timer_input.h  sf_tw_timer.c  sf_tw_timer.h
src/sf_lib/sf_tools/: sf_bitmap.h  sf_debug.h  sf_pkt_tools.h  sf_pkt_trace.c  sf_pkt_trace.h  sf_stat_tools.h  sf_string.h  sf_thread.h  sf_thread_tools.h  sf_tools.h
src/sf_main/: CMakeLists.txt  init.c  interface_shm.c  plugin.c  sf_main.c  sf_main_shm.c
src/sf_main/cli/: sf_handoff_cli.c  sf_main_cli.c
src/sf_main/include/: cli_udp_server.h  sf_eth_tool.h  sf_huge_pkt_tools.h  sf_interface.h  sf_interface_shm.h  sf_interface_tools.h  sf_intf_define.h  sf_intf_phy_stat.h  sf_lookup_port.h  sf_main.h  sf_main_shm.h
src/sf_main/nodes/decode/: sf_eth_input.c  sf_ip4_input.c  sf_ip6_input.c  sf_tcp_input.c  sf_udp_input.c
src/sf_main/nodes/handoff/: sf_handoff_input.c  sf_pkt_handoff.c
src/sf_main/nodes/transport/: sf_huge_pkt_intput.c  sf_huge_pkt_output.c  sf_pkt_drop.c  sf_pkt_output.c
src/sf_main/other/: cli_udp_server.c  sf_interface_stat.c  sf_intf_phy_stat.c  sf_intf_phy_stat_vm.c
src/sf_main/sf_feature/: sf_feature.h  sf_handoff_feature.c
src/test/: CMakeLists.txt  plugin.c
src/test/pool_test/: test.c
src/test/spinlock_test/: test.c
src/test/timer_test/: test.c
(+81 files in other folders)
